Add a small readme and gifs

--- a/notebooks/pvlib_tests.ipynb
+++ b/notebooks/pvlib_tests.ipynb
@@ -309,7 +309,7 @@
     "\n",
     "# filepaths\n",
     "fp_in = \"../images/AOI/*.png\"\n",
-    "fp_out = \"../images/AOI_over_day.gif\"\n",
+    "fp_out = \"../docs/AOI_over_day.gif\"\n",
     "\n",
     "# https://pillow.readthedocs.io/en/stable/handbook/image-file-formats.html#gif\n",
     "imgs = (Image.open(f) for f in sorted(glob.glob(fp_in)))\n",
