Add the new graphic with the correct colormap for mademoiselle

--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -624,14 +624,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 288/288 [03:08<00:00,  1.53it/s]\n"
+      "100%|██████████| 288/288 [03:20<00:00,  1.44it/s]\n"
      ]
     }
    ],
@@ -642,14 +642,14 @@
     "os.makedirs(folder, exist_ok=True)\n",
     "for i in tqdm(range(96*3)):\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(10,10))\n",
-    "    sns.heatmap(values[i], ax=ax)\n",
+    "    sns.heatmap(values[i], ax=ax, cmap=\"OrRd\")\n",
     "    plt.savefig(os.path.join(folder, f\"{str(i).rjust(5,'0')}.png\"))\n",
     "    plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
