Les filles peuvent être très exigentes de temps en temps 🙃

--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -624,14 +624,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 288/288 [03:20<00:00,  1.44it/s]\n"
+      "100%|██████████| 96/96 [01:20<00:00,  1.19it/s]\n"
      ]
     }
    ],
@@ -640,16 +640,20 @@
     "from tqdm import tqdm\n",
     "folder = \"../images/day_timelapse\"\n",
     "os.makedirs(folder, exist_ok=True)\n",
-    "for i in tqdm(range(96*3)):\n",
-    "    fig, ax = plt.subplots(1, 1, figsize=(10,10))\n",
-    "    sns.heatmap(values[i], ax=ax, cmap=\"OrRd\")\n",
+    "for i in tqdm(range(96)):\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(20,20))\n",
+    "    sns.heatmap(values[i]*1.2*4, ax=ax, cmap=\"OrRd\", vmin=0, vmax=1300)\n",
+    "    \n",
+    "    ax.set_title(\"Irradiance over a day (1st January 2020)\")\n",
+    "    ax.tick_params(left = False, right = False , labelleft = False ,\n",
+    "                labelbottom = False, bottom = False)\n",
     "    plt.savefig(os.path.join(folder, f\"{str(i).rjust(5,'0')}.png\"))\n",
     "    plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
